--- a/athom-smart-plug-v2.yaml
+++ b/athom-smart-plug-v2.yaml
@@ -84,21 +84,21 @@ sensor:
     update_interval: 60s
 
   - platform: cse7766
-    update_interval: 10s
     current:
       name: "Current"
       filters:
-          - lambda: if (x < 0.060) return 0.0; else return x;   #For the chip will report less than 3w power when no load is connected
-
+        - throttle_average: 10s
 
     voltage:
       name: "Voltage"
+      filters:
+        - throttle: 10s
+
     power:
       name: "Power"
       id: power_sensor
       filters:
-          - lambda: if (x < 3.0) return 0.0; else return x;    #For the chip will report less than 3w power when no load is connected
-
+        - throttle_average: 10s
 
     energy:
       name: "Energy"
@@ -107,6 +107,7 @@ sensor:
       filters:
         # Multiplication factor from W to kW is 0.001
         - multiply: 0.001
+        - throttle_average: 10s
       on_value:
         then:
           - lambda: |-
