--- a/athom-smart-plug.yaml
+++ b/athom-smart-plug.yaml
@@ -20,16 +20,33 @@ preferences:
   flash_write_interval: 1min
 
 api:
+  encryption:
+    key: !secret api_key
 
 ota:
+  password: !secret ota_pass
+
+
+wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
+
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  ap:
+    ssid: "Athom-Smart-Plug-V1"
+    password: !secret ap_pass
 
 logger:
+  baud_rate: 0
+
+mdns:
+  disabled: false
 
 web_server:
   port: 80
-
-wifi:
-  ap: {} # This spawns an AP with the device name and mac address with no password.
+  auth:
+    username: !secret web_user
+    password: !secret web_pass
 
 captive_portal:
 
